--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,9 @@
               <div class="header-navigation-area">
                 <ul class="main-menu nav justify-content-center">
                   <li><a href="index.html">Home</a></li>
-                  <li ><a href="about.html">About Us</a></li>
+                  <li><a href="about.html">About Us</a></li>
                   <li><a href="projects.html">Projects</a></li>
+                  <li><a href="committee.html">Committee</a>              
                   <li><a href="committee.html">Committee</a>
                   <li class="active"><a href="contact.html">Contact Us</a></li>
                 </ul>
