--- a/application.html
+++ b/application.html
@@ -126,7 +126,7 @@
                     typesetting, remaining essentially unchanged.</p> -->
                 </div>
                 <form class="volunteer-form-wrapper" id="contact-form"
-                  action="http://whizthemes.com/mail-php/raju/arden/mail.php" method="post">
+                  action="assets/php/mail.php" method="post">
                   <div class="row">
                     <div class="col-lg-12">
                       <div class="row row-gutter-20">
