--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
               <div class="contact-colunm">
                 <div class="contact-form">
                   <form class="contact-form-wrapper" id="contact-form"
-                    action="http://whizthemes.com/mail-php/raju/arden/mail.php" method="post">
+                    action="assets/php/mail.php" method="post">
                     <div class="row">
                       <div class="col-lg-12">
                         <div class="section-title">
