--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About Us</a></li>
                   <li><a href="projects.html">Projects</a></li>
-                  <li><a href="committee.html">Committee</a>              
+                  <!-- <li><a href="committee.html">Committee</a>               -->
                   <li><a href="committee.html">Committee</a>
                   <li class="active"><a href="contact.html">Contact Us</a></li>
                 </ul>
